# STM32F4-Zephyr-Projects

./: .gitignore  Makefile  README.md  requirements.txt
applications/Interrupt_Button_LED_Blink/: CMakeLists.txt  prj.conf
applications/Interrupt_Button_LED_Blink/src/: main.c
applications/Intr_Btn_LED_Blink/: CMakeLists.txt
applications/Intr_Btn_LED_Blink_pressed/: CMakeLists.txt
applications/Intr_Btn_LED_Blink_pressed/src/: main.c
applications/LIS302_accel_test/: CMakeLists.txt  app.overlay  prj.conf
applications/LIS302_accel_test/inc/: lis302_accel.h
applications/LIS302_accel_test/src/: lis302_accel.c  main.c
applications/Threaded_Button_LED_Blink/: CMakeLists.txt  prj.conf
applications/Threaded_Button_LED_Blink/build-cmake/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt
applications/Threaded_Button_LED_Blink/build-cmake-make/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  zephyr_modules.txt  zephyr_settings.txt
applications/Threaded_Button_LED_Blink/build-cmake-make/Kconfig/: Kconfig.modules  kconfig_module_dirs.cmake
applications/Threaded_Button_LED_Blink/build-cmake-make/zephyr/: .cmake.dotconfig.checksum  .config-trace.json  .config-trace.pickle  Makefile  cmake_install.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  zephyr.dts.d  (+8 more)
applications/Threaded_Button_LED_Blink/src/: main.c
dev/LED_Blink/: CMakeLists.txt
dev/LIS302_accel_test/: CMakeLists.txt
(+369 files in other folders)
